--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "webpack": "^5.99.8",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
